workspace-sf/force-app/main/default/objects/BCP_BatchSchedulerConfig__mdt/BCP_BatchSchedulerConfig__mdt.object-meta.xml
<CustomObject>
    <description>Metadado criado para armazenar os dados de configuração para agendamentos de Batch</description>
    <label>Batch Scheduler Config</label>
    <pluralLabel>Batch Scheduler Configs</pluralLabel>
</CustomObject>