workspace-sf/force-app/main/default/objects/BCP_BatchSchedulerConfig__mdt/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox para indicar se esta configuração está ativa ou não</description>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>