workspace-sf/force-app/main/default/objects/BCP_BatchSchedulerConfig__mdt/fields/BCP_DataHoraFim__c.field-meta.xml
<CustomField>
    <fullName>BCP_DataHoraFim__c</fullName>
    <label>Data/Hora Fim</label>
    <type>DateTime</type>
</CustomField>