workspace-sf/force-app/main/default/objects/BCP_BatchSchedulerConfig__mdt/fields/BCP_DataHoraInicio__c.field-meta.xml
<CustomField>
    <fullName>BCP_DataHoraInicio__c</fullName>
    <description>Horário para primeiro agendamento da Batch</description>
    <label>Data/Hora Início</label>
    <type>DateTime</type>
</CustomField>