workspace-sf/force-app/main/default/objects/BCP_BatchSchedulerConfig__mdt/fields/BCP_Frequencia_h__c.field-meta.xml
<CustomField>
    <fullName>BCP_Frequencia_h__c</fullName>
    <description>Frequência de chamada da Batch em horas</description>
    <label>Frequência (h)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>