workspace-sf/force-app/main/default/objects/BCP_BatchSchedulerConfig__mdt/fields/BCP_NomeBatch__c.field-meta.xml
<CustomField>
    <fullName>BCP_NomeBatch__c</fullName>
    <description>Batch para a qual as configurações se aplicam;</description>
    <label>Nome da Batch</label>
    <length>120</length>
    <type>Text</type>
</CustomField>